BUG3174 [P] No spacing between the reviews and Add a review form at 1199 scre...

--- a/src/client/src/ui/ProductInformation/styles.scss
+++ b/src/client/src/ui/ProductInformation/styles.scss
@@ -256,6 +256,9 @@
         }
       }
     }
+    @media #{$lg-layout} {
+      margin-top: 40px;
+    }
   }
 
   .review-wrapper {
